[package]
name = "sign-tx-frost"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.30.0"
#bitcoin = { version = "0.30.0", features = ["serde"], path = "../rust-bitcoin/bitcoin" }

miniscript = { version = "10.0.0", features = ["compiler", "std"] }
#miniscript = { version = "10.0.0", features = ["compiler", "std"], path = "../rust-miniscript" }

#frost-core = { version = "0.6.0", features = ["serde"] }
frost-core = { version = "1.0.0-rc.0", features = ["serde"], path = "../frost.copy/frost-core" }

#frost-secp256k1 = { version = "0.6.0", features = ["serde"] }
frost-secp256k1-tr = { version = "1.0.0-rc.0", features = ["serde"], path = "../frost.copy/frost-secp256k1-tr"  }

secp256k1 = { version = "0.27.0", features = ["serde"] }
#secp256k1 = { version = "0.27.0", features = ["serde"], path = "../rust-secp256k1" }
#secp256k1-sys = { version = "0.8.1", default-features = false, path = "../rust-secp256k1/secp256k1-sys" }

hex = "0.4.3"
rand = "0.8"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
k256 = { version = "0.13.0", features = ["arithmetic", "expose-field", "hash2curve"] }
clap = "4.4.2"
